--- a/website/main.css
+++ b/website/main.css
@@ -9,93 +9,34 @@
     -webkit-box-sizing: border-box;
 }
 
+* :focus {
+    outline: none;
+}
 /* styles */
 body {
     font-family: 'Montserrat', sans-serif;
-    background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);
-    color: #FFF;
 }
 
-/* container */
-.container {
-    height: 100vh;
-    text-align: center;
-    display: grid;
-    grid-auto-rows: minmax(100px, auto);
-    grid-template-areas: 
-    'header'
-    'main'
-    'footer'
-    ;
-}
+/* mobile design */
 
-/* header */
-header {
-    grid-area: header;
-    padding: 4rem;
-}
 
-header h1 {
-    font-size: 2.5rem;
-    font-weight: 900;
-}
 
-/* main */
-main {
-    display: flex;
-    flex-direction: column;
-}
 
-.location {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    height: 200vh;
-}
 
-.location-timezone {
-    font-size: 2rem;
-    font-weight: 600;
-}
 
-.temperature {
-    display: flex;
-    flex-direction: column;
-    height: 300vh;
-}
 
-.temperature-degree {
-    margin-bottom: 3rem;
-    cursor: pointer;
-
-}
-
-.degree {
-    font-size: 2rem;
-    font-weight: 400;
-}
-
-.unit {
-    font-size: 1.7rem;
-    font-weight: 700;
-}
-
-.temperature-description {
-    margin-top: 3rem;
-    font-weight: 600;
-    font-size: 1.2rem;
-}
-
+/* photos */
 .img-top {
     position: absolute;
     z-index: -1;
     top: 0;
     right: 0;
-    margin: 2rem;
+    margin: 0.5rem;
 }
+
 .img-top i {
-    color: rgba(0, 0, 0, 0.2);
-    font-size: 10rem;
+    color: #19555C;
+    font-size: 7rem;
 }
 
 .img-bottom {
@@ -106,17 +47,23 @@ main {
 }
 
 .img-bottom i {
-    color: rgba(0, 0, 0, 0.2);
-    font-size: 25rem;
+    color: #19555C;
+    font-size: 15rem;
 }
 
-/* footer */
-footer {
-    padding: 2rem;
+/* animation */
+.animation {
+    animation: fader 2s ease-in-out;
 }
 
-footer p {
-    font-size: 0.9rem;
-    font-weight: 700;
-    color: #fffff8;
+@keyframes fader {
+    0% {
+        opacity: 0;
+        transform: translateY(8rem);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
+
