--- a/website/main.css
+++ b/website/main.css
@@ -83,13 +83,13 @@ button {
 }
 
 .user-input {
-    margin: 2rem;
+    margin: 4rem;
     grid-area: user-input;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 1rem;
+    padding: 2rem;
     text-align: center;
 }
 
@@ -101,9 +101,20 @@ button {
 }
 
 .entry-title {
-    font-size: 1.2rem;
+    font-size: 2rem;
     font-weight: 600;
     color: #19555C;
+}
+
+.entry-container {
+    display: flex;
+    flex-direction: column;
+    color: #FCB960;
+    font-weight: 700;
+}
+
+.entry-container div {
+    margin: 0.5rem;
 }
 
 /* footer */
@@ -142,26 +153,26 @@ footer {
 
 .right-photo {
     position: absolute;
-    right: 2rem;
-    bottom: 10rem;
+    right: 1rem;
+    top: 17rem;
     z-index: -1;
 }
 
 .right-photo i {
-    color: rgba(0, 0, 0, 0.1);
-    font-size: 30rem;
+    color: rgba(0, 0, 0, 0.2);
+    font-size:13rem;
 }
 
 .left-photo {
     position: absolute;
-    left: 2rem;
-    bottom: 10rem;
+    left: 1rem;
+    bottom: 3rem;
     z-index: -1;
 }
 
 .left-photo i {
-    color: rgba(0, 0, 0, 0.1);
-    font-size: 30rem;
+    color: rgba(0, 0, 0, 0.2);
+    font-size: 15rem;
 }
 
 .right-animation {
@@ -192,3 +203,16 @@ footer {
         transform: translateX(0);
     }
 }
+
+/* @media(max-width: 1050px) {
+    .right-photo i {
+        font-size: 12rem;
+    }
+    .right-photo {
+        right: 0;
+        top: 20rem;
+    }
+    .left-photo i {
+        font-size: 15rem;
+    }
+} */
